<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Arama öğesi -->
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/search_image"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <!-- Tekli seçim grubuyla menü öğesi -->
    <group android:checkableBehavior="single">
        <!-- `Sort By` alt menüsü -->
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/sort_by">

            <!-- Alt menü tanımı -->
            <menu>
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/priority_high" />
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/priority_low" />
            </menu>
        </item>
    </group>

    <!-- Silme işlemi menü öğesi -->
    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />
</menu>
